--- a/index.html
+++ b/index.html
@@ -5,36 +5,38 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-  <div class="header">
-    <img src="https://i.imgur.com/kmQEXAI.png" alt="Logo da nossa loja" class="logo">
+
+ <header>
+    <nav>
+      <div class="logo">
+     <img src="https://i.imgur.com/kmQEXAI.png" alt="Logo">
+      </div>
+      <ul>
+        <li><a class="active" href="#">Início</a></li>
+        <li><a href="https://mnreis.github.io/sobre/">Sobre</a></li>
+        <li><a href="#">Contato</a></li>
+        <li><a href="https://mnreis.github.io/carrinhodecompras/">Carrinho</a></li>
+        <li><a href="https://mnreis.github.io/login/">Cadastrar</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
+
+
+
+  <div class="sobre">
     <h1>Sobre a nossa loja: H3M</h1>
   </div>
 
-  <div class="container">
-    <div class="names-container">
-      <div class="name">
-        <span class="name-text">[Murilo]</span>
-        <span class="role">[FRONT-END]</span>
-      </div>
-      <div class="name">
-        <span class="name-text">[Nome 2]</span>
-        <span class="role">[Função 2]</span>
-      </div>
-      <div class="name">
-        <span class="name-text">[Nome 3]</span>
-        <span class="role">[Função 3]</span>
-      </div>
-      <div class="name">
-        <span class="name-text">[Nome 4]</span>
-        <span class="role">[Função 4]</span>
-      </div>
-    </div>
-
+ 
+<div class="texto">
     <h2>Nossa História</h2>
-    <p>A nossa loja foi fundada por [Nome 1], [Nome 2], [Nome 3] e [Nome 4] em [ano de fundação]. Combinando a paixão por [descrição do tipo de produto ou serviço da loja], eles decidiram criar um lugar único onde os clientes pudessem encontrar os melhores produtos e desfrutar de uma experiência de compra excepcional. Ao longo dos anos, a nossa loja tem se dedicado a oferecer produtos de alta qualidade e atendimento personalizado, conquistando a confiança e fidelidade de inúmeros clientes.</p>
+    <p>A nossa loja foi fundada por Murilo, [Nome 2], [Nome 3] e [Nome 4] em 2023. Combinando a paixão por descrição do tipo de produto ou serviço da loja, eles decidiram criar um lugar único onde os clientes pudessem encontrar os melhores produtos e desfrutar de uma experiência de compra excepcional. Ao longo dos anos, a nossa loja tem se dedicado a oferecer produtos de alta qualidade e atendimento personalizado, conquistando a confiança e fidelidade de inúmeros clientes.</p>
 
     <h2>Objetivo da Loja</h2>
     <p>O nosso objetivo é proporcionar aos nossos clientes uma experiência de compra satisfatória e memorável. Buscamos constantemente superar as expectativas, oferecendo produtos de excelência, atendimento atencioso e soluções personalizadas. Queremos que cada cliente se sinta valorizado e apreciado ao entrar na nossa loja, e estamos comprometidos em construir relacionamentos duradouros com base na confiança e transparência. A nossa missão é ser a loja de referência no mercado, oferecendo produtos que agreguem valor e contribuam para a satisfação e felicidade dos nossos clientes.</p>
+  </div>
   </div>
 
 </body>
