--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
  
 <div class="texto">
     <h2>Nossa História</h2>
-    <p>A nossa loja foi fundada por Murilo, [Nome 2], [Nome 3] e [Nome 4] em 2023. Combinando a paixão por descrição do tipo de produto ou serviço da loja, eles decidiram criar um lugar único onde os clientes pudessem encontrar os melhores produtos e desfrutar de uma experiência de compra excepcional. Ao longo dos anos, a nossa loja tem se dedicado a oferecer produtos de alta qualidade e atendimento personalizado, conquistando a confiança e fidelidade de inúmeros clientes.</p>
+    <p>A nossa loja foi fundada por Murilo, Marcus, Hygor e Matheusm E. em 2023. Combinando a paixão por descrição do tipo de produto ou serviço da loja, decidimos criar um lugar único onde os clientes pudessem encontrar os melhores produtos e desfrutar de uma experiência de compra excepcional. A nossa loja tem se dedicado a oferecer produtos de alta qualidade e atendimento personalizado, conquistando a confiança e fidelidade de inúmeros clientes.</p>
 
     <h2>Objetivo da Loja</h2>
     <p>O nosso objetivo é proporcionar aos nossos clientes uma experiência de compra satisfatória e memorável. Buscamos constantemente superar as expectativas, oferecendo produtos de excelência, atendimento atencioso e soluções personalizadas. Queremos que cada cliente se sinta valorizado e apreciado ao entrar na nossa loja, e estamos comprometidos em construir relacionamentos duradouros com base na confiança e transparência. A nossa missão é ser a loja de referência no mercado, oferecendo produtos que agreguem valor e contribuam para a satisfação e felicidade dos nossos clientes.</p>
