--- a/index.html
+++ b/index.html
@@ -20,24 +20,20 @@
       </ul>
     </nav>
   </header>
+<!DOCTYPE html>
+<html>
+<head>
 
+    <div class="container">
+        <img src="https://i.imgur.com/tzXXECD.png" alt="Imagem">
+    </div>
 
-
-
-
-  <div class="sobre">
-    <h1>Sobre a nossa loja: H3M</h1>
-  </div>
-
- 
 <div class="texto">
-    <h2>Nossa História</h2>
-    <p>A nossa loja foi fundada por Murilo, Marcus, Hygor e Matheusm E. em 2023. Combinando a paixão por descrição do tipo de produto ou serviço da loja, decidimos criar um lugar único onde os clientes pudessem encontrar os melhores produtos e desfrutar de uma experiência de compra excepcional. A nossa loja tem se dedicado a oferecer produtos de alta qualidade e atendimento personalizado, conquistando a confiança e fidelidade de inúmeros clientes.</p>
+    <h2>NOSSA HISTÓRIA</h2>
+    <p>A nossa loja foi fundada por Murilo, Marcus, Hygor e Matheus E. em 2023. Combinando a paixão por descrição do tipo de produto ou serviço da loja, decidimos criar um lugar único onde os clientes pudessem encontrar os melhores produtos e desfrutar de uma experiência de compra excepcional. A nossa loja tem se dedicado a oferecer produtos de alta qualidade e atendimento personalizado, conquistando a confiança e fidelidade de inúmeros clientes.</p>
 
-    <h2>Objetivo da Loja</h2>
+    <h2>OBJETIVO DA LOJA</h2>
     <p>O nosso objetivo é proporcionar aos nossos clientes uma experiência de compra satisfatória e memorável. Buscamos constantemente superar as expectativas, oferecendo produtos de excelência, atendimento atencioso e soluções personalizadas. Queremos que cada cliente se sinta valorizado e apreciado ao entrar na nossa loja, e estamos comprometidos em construir relacionamentos duradouros com base na confiança e transparência. A nossa missão é ser a loja de referência no mercado, oferecendo produtos que agreguem valor e contribuam para a satisfação e felicidade dos nossos clientes.</p>
   </div>
-  </div>
-
 </body>
 </html>
